# pcomp

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  bitio.c  bitio.h  common.c  common.h  entropy.c  huffman.c  huffman.h  pcomp_container.c  pcomp_container.h  symbol.c  symbol.h
tests/: CMakeLists.txt  cases.c  cases.h  char_encode_decode.c  check_list.c  run_and_diff.sh  test_bitio.c  test_config.h.in  test_huffman.c  test_symbols.c  word_encode_decode.c
tests/texts/: text1  text2  text3
